<resources>
    <string name="app_name">GifTip</string>

    <string name="enter_amount">Enter Amount </string>
    <string name="tap_enter_amount"><font size="15">TAP HERE TO ENTER AMOUNT</font></string>

    <string name="tip_percentage">15%</string>

    <string name="tip">"TIP: "</string>
    <string name="no_money">$0.00</string>
    <string name="total">T  O  T  A  L</string>
    <string name="zero_percent">0%</string>
    <string name="tip_title">TIP PERCENTAGE</string>

    <string name="money">$906.28</string>
    <string name="money2">$555.55</string>
    <string name="mystery">\???</string>



</resources>
